--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.21.1",
     "react-slick": "^0.29.0",
